--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,9 +7,10 @@
 </ion-header>
 
 <ion-content color="dark">
-  <ion-searchbar placeholder="Buscar Pokemon" color="medium"></ion-searchbar>
+  <ion-searchbar placeholder="Buscar Pokemon" color="medium" 
+  (ionChange)="buscarPokemon($event)"></ion-searchbar>
 
-  <ion-item-sliding *ngFor="let pokemon of listaPokemons">
+  <ion-item-sliding *ngFor="let pokemon of listaFiltrada">
     <ion-item color="dark">
 
       <ion-chip color="light" slot="start">
