--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,11 +7,11 @@
 </ion-header>
 
 <ion-content color="dark">
-  <ion-searchbar placeholder="Buscar Pokemon" color="medium" 
-  (ionChange)="buscarPokemon($event)"></ion-searchbar>
+  <ion-searchbar placeholder="Buscar Pokemon" color="medium" (ionChange)="buscarPokemon($event)"></ion-searchbar>
 
   <ion-item-sliding *ngFor="let pokemon of listaFiltrada">
-    <ion-item color="dark">
+    
+    <ion-item color="dark" (click)="abrirDadosPokemon(pokemon)">
 
       <ion-chip color="light" slot="start">
         <ion-label [color]="pokemon.tipos[0] | lowercase">{{pokemon.numero}}</ion-label>
